--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py27,py36
+envlist = py38
+isolated_build = True
 
 [testenv]
-deps=nose
-     -r{toxinidir}/requirements.txt
-commands=nosetests
+deps = pytest
+commands = pytest {posargs}
 
 [flake8]
 ignore = E402
