Use README.rst instead of README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "gitupdater"
 version = "1.0.0"
 description = "Ansible module for the git-repo-updater (gitup)."
 authors = ["Josef Friedrich <josef@friedrich.rocks>"]
-readme = "README.md"
+readme = "README.rst"
 license = "GPL-3.0-only"
 repository = "https://github.com/Josef-Friedrich/ansible-module-gitupdater"
 classifiers = [
