--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,33 @@
 [tox]
-envlist = py38
+envlist = py, format, lint
 isolated_build = True
 
 [testenv]
-deps = pytest
-commands = pytest {posargs}
+# Do not use basepython here. This way the existing Python version can
+# be selected automatically.
+# basepython = python3.10
+deps =
+    nose2==0.11.0
+# --output-buffer captures the printed output of the tests.
+commands = nose2 --output-buffer {posargs}
 
-[flake8]
-ignore = E402
+[testenv:format]
+deps =
+    isort==5.10.1
+    black==22.6.0
+commands =
+    isort .
+    black .
+
+[testenv:lint]
+deps =
+    flake8==4.0.1
+commands =
+    flake8 gitupdater.py tests
+
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39
+    3.10: py310, format, lint
+    3.11: py311
