--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ gitup = "^0.5.1"
 [tool.poetry.group.dev.dependencies]
 ansible = "^6.0.0"
 pytest = "^7.1.2"
-readme-patcher = "^0.5.0"
+readme-patcher = "^0.6.0"
+tox = "^3.25.1"
 
 [build-system]
 requires = ["poetry>=1.2.0b2"]
