--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,4 @@ commands =
 
 [gh-actions]
 python =
-    3.8: py38
-    3.9: py39
-    3.10: py310, format, lint
-    3.11: py311
+    3.10: py, format, lint
