--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,10 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-gitup = "^0"
+gitup = { git = "https://github.com/earwig/git-repo-updater.git" }
+ansible = "^10"
 
 [tool.poetry.group.dev.dependencies]
-ansible = "^10"
 pytest = "^8"
 readme-patcher = "^0"
 tox = "^4"
