--- a/tox.ini
+++ b/tox.ini
@@ -1,30 +1,31 @@
 [tox]
-envlist = py, format, lint
+envlist = py{310,311,312,313}, format, lint
 isolated_build = True
+
 
 [testenv]
 # Do not use basepython here. This way the existing Python version can
 # be selected automatically.
 # basepython = python3.10
-deps =
-    nose2==0.11.0
-# --output-buffer captures the printed output of the tests.
-commands = nose2 --output-buffer {posargs}
+deps = pytest
+commands = pytest
 
 [testenv:format]
-deps =
-    isort==5.10.1
-    black==22.6.0
+deps = ruff
 commands =
-    isort .
-    black .
+    ; sort imports
+    ruff check --select I --fix .
+    ruff format
 
 [testenv:lint]
 deps =
-    flake8==4.0.1
+    ruff
 commands =
-    flake8 gitupdater.py tests
+    ruff check
 
 [gh-actions]
 python =
-    3.10: py, format, lint
+    3.10: py310
+    3.11: py311
+    3.12: py312, format, docs, lint
+    3.13: py313
