--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{310,311,312,313}, format, lint
+envlist = py{310,311,312,313}, format, docs, lint
 isolated_build = True
 
 
@@ -16,6 +16,12 @@ commands =
     ; sort imports
     ruff check --select I --fix .
     ruff format
+
+[testenv:docs]
+deps =
+    readme-patcher
+commands =
+    readme-patcher
 
 [testenv:lint]
 deps =
